Add my favicon.

--- a/resources/templates/themes/solarized_light/html/base.html
+++ b/resources/templates/themes/solarized_light/html/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <title>{{title}}{% block subtitle %}{% endblock %}</title>
     <link rel="canonical" href="{{site-url}}{{uri}}">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
     <meta name="description" content="{{description}}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:description" content="{{description}}" />
