--- a/resources/templates/themes/solarized_light/html/base.html
+++ b/resources/templates/themes/solarized_light/html/base.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>
-    <footer>Copyright &copy; {{today|date:yyyy}} {{author}}
+    <footer>Copyright &copy; {{first-publishing}}-{{today|date:yyyy}} {{author}}
         <p style="text-align: center;">Powered by <a href="http://cryogenweb.org">Cryogen</a></p></footer>
 </div>
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
