--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -13,6 +13,10 @@ a:visited {
     color: #6c71c4; /* violet */
 }
 
+a:visited>code {
+    color: #6c71c4; /* violet */
+}
+
 .container {
     max-width: 1000px;
 }
